--- a/requirements.txt
+++ b/requirements.txt
@@ -9,5 +9,6 @@ h5py == 3.10.0
 argparse >= 1.4.0
 psutil >= 5.0.1
 scipy >= 1.1.0
-scikit-learn >= 0.20.0
+scikit-learn == 1.3.1
+joblib == 1.3.1
 soynlp == 0.0.493
